<resources>
    <string name="app_name">Real Estate Manager</string>

    <!--  MENU  -->
    <string name="add_estate_text">Add an Estate</string>
    <string name="open_map_text">Open Maps</string>

    <string name="lorem_ipsum">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</string>


    <!--  LIST SEARCH DIALOG -->
    <string name="search_estate">Search an estate</string>
    <string name="search_type_title_text">Type</string>
    <string name="search_button_text">Search</string>
    <string name="reset_dialog">RESET</string>
    <string name="search_create_date_hint">Select a creation date interval</string>
    <string name="search_sold_date_hint">Select a sold date interval</string>
    <string name="search_create_date">Created between %1$s and %2$s</string>
    <string name="search_create_date_oneday">"Estates created on %1$s"</string>
    <string name="search_sold_date">Sold between %1$s \nand %2$s</string>
    <string name="search_sold_date_oneday">"Estates sold on %1$s"</string>
    <string name="search_creation_pickerdate_title">Select the creation interval</string>
    <string name="search_sale_pickerdate_title">Select the sale interval</string>
    <string name="search_notification">Estate List filtered with your parameters.</string>
    <string name="search_notification_reset">Estate List filter is now reset.</string>
    <string name="search_picture_text">"Minimum picture "</string>
    <string name="search_poi_text">Nearby Points of Interest</string>
    <string name="search_endtime_switch_available">Available  </string>
    <string name="search_endtime_switch_sold">Sold  </string>

    <!--  DETAIL  -->
    <string name="item_estate_first_line_text">%1$s</string>
    <string name="detail_estate_title_surface_text">%1$s m²</string>
    <string name="detail_description_title_text">Description:</string>
    <string name="detail_price_title">Price:</string>
    <string name="detail_estate_price_dollar">%1$s $</string>
    <string name="detail_estate_price_euro">%1$s €</string>
    <string name="detail_surface_title">"Surface: "</string>
    <string name="detail_estate_rooms_text">%1$s rooms</string>
    <string name="string_detail_not_selected_text">No estate selected</string>
    <string name="detail_address_title">Address:</string>
    <string name="detail_estate_address_text">%1$s %2$s, \n%3$s %4$s</string>
    <string name="detail_estate_address_streetnumber">%1$s,&#160;  </string>  <!--1 white space-->
    <string name="detail_estate_address_postalcode">%1$s &#160; </string>
    <string name="detail_employee_text">Estate managed by \n%1$s %2$s</string>
    <string name="detail_pois_title">Nearby Points of Interest</string>
    <string name="detail_date_start">Created on\n%1$s</string>
    <string name="detail_date_sold">Sold on\n%1$s</string>



    <!--  CREATE  -->
    <string name="create_type_title_text">Type</string>
    <string name="create_estate_house">House</string>
    <string name="create_estate_flat">Flat</string>
    <string name="create_description_text">Description</string>
    <string name="create_price_text">Price</string>
    <string name="create_surface_text">Surface</string>
    <string name="create_rooms_text">Number of rooms</string>
    <string name="create_address_street_text">Street</string>
    <string name="create_address_streetnumber_text">Number</string>
    <string name="create_address_postalcode_text">Postal Code</string>
    <string name="create_address_city_text">City</string>
    <string name="create_employee_text">Employee</string>
    <string name="edit_estate_titlebar">Edit the Estate</string>
    <string name="add_estate_titlebar">Add a new Estate</string>
    <string name="edit_estate_availability">Available  </string>
    <string name="edit_estate_sold">Sold</string>
    <string name="create_employee">%1$s %2$s</string>
    <string name="create_pois_text">Pois </string>

    <!--  CREATE / EDIT Notifications  -->
    <string name="create_description_error_text">Estate Description is less than %1$s characters</string>
    <string name="create_price_missing_error_text">Estate price is required</string>
    <string name="create_type_error_text">Estate Type is required</string>
    <string name="create_city_error_text">Estate City is required</string>
    <string name="create_price_toolow_error_text">Estate Price seems too low</string>
    <string name="create_streetnumber_error_text">Provide a street for the street number</string>
    <string name="create_estate_land">Land</string>
    <string name="create_employee_error_text">An Employee is required</string>
    <string name="create_estate_confirmation">Estate successfully created</string>
    <string name="edit_estate_confirmation">Estate successfully updated</string>
	<string name="create_pickerdate_title">Select the sale date</string>
    <string name="create_endtime_error_text">Sale date should be later than creation date</string>
	<string name="create_picture_name_hint">Picture name</string>
    <string name="create_picture_delete_dialog_title">Delete picture</string>
    <string name="create_picture_delete_dialog_message">The picture will be permanently deleted.</string>
    <string name="create_picture_delete_dialog_confirmation">Picture deleted</string>
    <string name="create_picture_delete_dialog_positivebutton">Confirm picture deletion</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="create_picture_click_dialog_title">Update picture name</string>
    <string name="create_picture_click_dialog_positivebutton">Confirm modifications</string>
    <string name="convert_price">Convert estate price</string>
	
	<!--  MAP  -->
	<string name="internet_required">Please connect to the Internet in order to enable this functionality</string>
    <string name="location_permission_denied">The location access has been denied.</string>
    <string name="permission_required_toast">The location access has been denied.</string>
    <string name="permission_rationale_location">Do you accept to share your location ?</string>
    <string name="permission_accept">Accept</string>
    <string name="permission_refuse">Refuse</string>
	<string name="NO">NO</string>
	
    <!--  Image descriptions  -->
    <string name="create_estate_description">Create an estate image</string>
    <string name="detail_rooms_image_description">Number of rooms</string>
    <string name="detail_surface_image_description">Surface of the estate</string>
    <string name="sold_tag_description">Sold tag on the estate</string>
    <string name="detail_map_description">Static map for the estate</string>
    <string name="item_estate_picture_description">Picture of the estate</string>
    <string name="no_estate_available">No Estate Available</string>
    <string name="loan_title_text">Calculate a Loan</string>
    <string name="loan_amount_text">Amount to loan</string>
    <string name="loan_result_text">Monthly loan refund</string>
    <string name="loan_interest_text">Interest rate</string>
    <string name="loan_insurance_text">Insurance rate</string>
    <string name="loan_duration_text">Refund duration</string>
    <string name="return_dialog">Return</string>


    <!-- Settings -->
    <string name="dark_mode_title">Dark Mode</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="system_default">System Default</string>

    <string name="dark_mode_key" translatable="false">darkMode</string>
    <string name="enabled_value" translatable="false">enabled</string>
    <string name="disabled_value" translatable="false">disabled</string>
    <string name="system_default_value" translatable="false">default</string>
    <string name="settings_daynight">Settings</string>
    <string name="edit_sale_pickerdate_title">Select the sale date</string>


</resources>
