<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_menu">

    <item
        android:id="@+id/open_map"
        android:icon="@drawable/ic_baseline_gps_fixed_24"
        android:title="@string/open_map_text"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_estate"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_property_text"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/convert_price"
        android:icon="@drawable/ic_baseline_euro_24"
        android:title="@string/convert_price"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit_estate"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/add_property_text"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search_estate"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_estate"
        android:visible="true"
        app:showAsAction="never" />

</menu>