<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/detailEstateScrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_small">

            <TextView
                android:id="@+id/search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/search_estate"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchEstateTypeSpinner"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_type_title_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title">

                <AutoCompleteTextView
                    android:id="@+id/searchEstateTypeSpinnerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:labelFor="@id/searchEstateTypeSpinnerView" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/search_price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/create_price_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchEstateTypeSpinner" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/search_price"
                style="Theme.MaterialComponents.Light.DarkActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:stepSize="50000"
                android:valueFrom="0"
                android:valueTo="1000000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/search_price_text_view" />

            <TextView
                android:id="@+id/search_surface_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/create_surface_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_price" />


            <com.google.android.material.slider.RangeSlider
                android:id="@+id/search_surface"
                style="Theme.MaterialComponents.Light.DarkActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:stepSize="50000"
                android:valueFrom="0"
                android:valueTo="1000000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/search_surface_text_view" />

            <TextView
                android:id="@+id/search_create_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:drawablePadding="@dimen/margin_small"
                android:hint="@string/search_create_date_hint"
                app:drawableStartCompat="@drawable/ic_calendar_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_surface" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/search_sold_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/edit_estate_availability"
                app:layout_constraintEnd_toStartOf="@id/search_sold_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_create_date"
                app:thumbTint="@color/green" />

            <TextView
                android:id="@+id/search_sold_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:drawablePadding="@dimen/margin_small"
                android:hint="@string/search_sold_date_hint"
                android:maxLines="2"
                android:textAlignment="center"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/ic_calendar_24"
                app:layout_constraintBottom_toBottomOf="@id/search_sold_switch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/search_sold_switch"
                app:layout_constraintTop_toTopOf="@id/search_sold_switch" />

            <TextView
                android:id="@+id/search_picture_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/create_picture_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_sold_switch" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/search_picture_togglegroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_picture_text_view">
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <Button
                android:id="@+id/search_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="@string/cancel_dialog"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@id/search_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_picture_togglegroup" />


            <Button
                android:id="@+id/search_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="@string/search_button_text"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/search_cancel"
                app:layout_constraintTop_toBottomOf="@id/search_picture_togglegroup" />

            <Button
                android:id="@+id/search_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="@string/reset_dialog"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>